k8s/infrastructure/deployment/kubechecks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubechecks
  labels:
    app.kubernetes.io/part-of: infrastructure
    app.kubernetes.io/managed-by: argocd
    dev.pc-tips: deployment
    kubernetes.io/metadata.name: kubechecks
    network-policy: enabled
