k8s/infrastructure/deployment/kubechecks/deployment.yaml
---
# Source: kubechecks/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubechecks
  labels:
    helm.sh/chart: kubechecks-0.5.4
    app.kubernetes.io/name: kubechecks
    app.kubernetes.io/instance: kubechecks
    app.kubernetes.io/version: v0.5.4
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/part-of: infrastructure
    dev.pc-tips: deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubechecks
      app.kubernetes.io/instance: kubechecks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubechecks
        app.kubernetes.io/instance: kubechecks
        app.kubernetes.io/part-of: infrastructure
        dev.pc-tips: deployment
    spec:
      serviceAccountName: kubechecks
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      dnsPolicy: ClusterFirst
      containers:
        - name: kubechecks
          image: ghcr.io/zapier/kubechecks:v2.4.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /live
              port: 8080
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
