k8s/infrastructure/deployment/kubechecks/service.yaml
---
# Source: kubechecks/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubechecks
  labels:
    helm.sh/chart: kubechecks-0.5.4
    app.kubernetes.io/name: kubechecks
    app.kubernetes.io/instance: kubechecks
    app.kubernetes.io/version: latest
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubechecks
    app.kubernetes.io/instance: kubechecks
