k8s/infrastructure/deployment/kubechecks/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-to-argocd
  namespace: kubechecks
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubechecks
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kubechecks
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-server
      toPorts:
        - ports:
            - port: 443
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: 8081
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            kubernetes.io/name: kubernetes
      toPorts:
        - ports:
            - port: 443
              protocol: TCP
    - toEndpoints:
        - matchLabels: {}
      toPorts:
        - ports:
            - port: 53
              protocol: UDP
            - port: 53
              protocol: TCP
